Poprawnienie odświeżania tokena użytkownika poprzez dodanie tokena odświeżania